# buildit

./: .buildit.kdl  .dockerignore  .env  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.migrations  FRONTEND.md  IMPLEMENTATION.md  PLAN.md  README.md  Tiltfile  buildit.kdl
crates/buildit-api/: Cargo.toml
crates/buildit-api/src/: error.rs  lib.rs  main.rs  state.rs  ws.rs
crates/buildit-api/src/routes/: applications.rs  auth.rs  deployment.rs  health.rs  mod.rs  pipelines.rs  repositories.rs  stacks.rs  tenants.rs  ui.rs  webhooks.rs
crates/buildit-api/src/services/: git.rs  github.rs  mod.rs  stack_runner.rs  terraform.rs
crates/buildit-api/templates/: base.html  pipeline_detail.html  pipelines.html  run_detail.html
crates/buildit-api/templates/pages/: dashboard.html
crates/buildit-api/templates/pages/applications/: detail.html  list.html  new.html
crates/buildit-api/templates/pages/deployments/: history.html  services.html
crates/buildit-api/templates/pages/environments/: detail.html  list.html  new.html  service.html
crates/buildit-api/templates/pages/infrastructure/: targets.html  targets_new.html
crates/buildit-api/templates/pages/pipelines/: detail.html  list.html  new.html  run.html
crates/buildit-api/templates/pages/repositories/: connect.html  detail.html  list.html
crates/buildit-api/templates/pages/runs/: list.html
crates/buildit-api/templates/pages/settings/: git.html  index.html  notifications.html  secrets.html  team.html  tokens.html
crates/buildit-api/templates/pages/stacks/: detail.html  list.html  new.html
crates/buildit-cli/: Cargo.toml
crates/buildit-cli/src/: main.rs
crates/buildit-cli/src/commands/: mod.rs  pipelines.rs  run.rs  runs.rs
crates/buildit-config/: Cargo.toml
crates/buildit-config/src/: error.rs  lib.rs  pipeline.rs  system.rs  variables.rs
crates/buildit-core/: Cargo.toml
crates/buildit-core/src/: application.rs  artifact.rs  deployer.rs  error.rs  executor.rs  id.rs  lib.rs  pipeline.rs  repository.rs  secret.rs  stack.rs
crates/buildit-db/: Cargo.toml  build.rs  clorinde.toml
crates/buildit-db-queries/: Cargo.toml
crates/buildit-db-queries/src/: queries.rs
crates/buildit-db-queries/src/queries/: jobs.rs  pipelines.rs  tenants.rs
crates/buildit-db/migrations/: 001_tenants.sql  002_pipelines.sql  003_job_queue.sql  004_stages.sql  005_deployments.sql  006_seed_data.sql  007_organizations_users.sql  008_seed_orgs_users.sql  009_pipeline_stages.sql  010_seed_example_pipelines.sql  011_buildit_pipeline.sql  012_repositories_stacks.sql  013_applications.sql
crates/buildit-db/queries/: jobs.sql  pipelines.sql  tenants.sql
crates/buildit-db/src/: error.rs  lib.rs  repo.rs
crates/buildit-db/src/repo/: application.rs  deployment.rs  logs.rs  organization.rs  pipeline.rs  repository.rs  stack.rs  tenant.rs
crates/buildit-deployer/: Cargo.toml
crates/buildit-deployer/src/: kubernetes.rs  lib.rs
crates/buildit-executor/: Cargo.toml
crates/buildit-executor/src/: docker.rs  kubernetes.rs  lib.rs
crates/buildit-scheduler/: Cargo.toml
crates/buildit-scheduler/src/: lib.rs  orchestrator.rs  queue.rs  worker.rs
examples/: echo.kdl  simple.kdl
k8s/: postgres.yaml
k8s/base/: api.yaml  kustomization.yaml  migrations-job.yaml  namespace.yaml  postgres.yaml
scripts/: run-migrations.sh
