[package]
name = "buildit-cli"
description = "CLI tool for BuildIt CI/CD"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "buildit"
path = "src/main.rs"

[dependencies]
buildit-core.workspace = true
buildit-config.workspace = true
buildit-executor.workspace = true
buildit-scheduler.workspace = true

clap.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
url.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
