[package]
name = "buildit-core"
description = "Core domain types and traits for BuildIt CI/CD"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
bytes.workspace = true
chrono.workspace = true
derive_more.workspace = true
futures.workspace = true
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true
