[package]
name = "buildit-db"
description = "Database layer for BuildIt CI/CD"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
buildit-core.workspace = true
buildit-db-queries.workspace = true
async-trait.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio-postgres.workspace = true
deadpool-postgres.workspace = true

# Keep sqlx for migrations only
sqlx.workspace = true
