[package]
name = "buildit-executor"
description = "Job execution backends for BuildIt CI/CD"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
buildit-core.workspace = true
async-trait.workspace = true
bytes.workspace = true
chrono.workspace = true
futures.workspace = true
kube.workspace = true
k8s-openapi.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream = "0.1"
tracing.workspace = true
bollard.workspace = true
uuid.workspace = true
